# python-static-test

./: .gitconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: app.py
app/controllers/: index.py
config/: config.py
deployment/: app-run.sh  gconfig.py  main.py
tests/: nose.cfg  test_index.py
