[tool.poetry]
name = "python-static-test"
version = "1.0.0"
readme = "README.md"
description = "The simple template to prepare static tests on a Python project."
repository = "https://github.com/hackerYM/python-static-test"
authors = ["hackerYM <hacker.yenming@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-script = "^2.0.6"

pytest-flask = {version = "^1.1.0", optional = true}
pytest-cov = {version = "^2.11.1", optional = true}

flake8-bandit = {version = "^2.1.2", optional = true}
flake8-broken-line = {version = "^0.3.0", optional = true}
flake8-bugbear = {version = "^20.11.1", optional = true}
flake8-builtins = {version = "^1.5.3", optional = true}
flake8-commas = {version = "^2.0.0", optional = true}
flake8-comprehensions = {version = "^3.3.1", optional = true}
flake8-mutable = {version = "^1.2.0", optional = true}
flake8-quotes = {version = "^3.2.0", optional = true}
flakehell = {version = "^0.9.0", optional = true}
pep8-naming = {version = "^0.11.1", optional = true}
safety = {version = "^1.10.3", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"

[tool.poetry.extras]
unit-test = [
    "pytest-flask",
    "pytest-cov"
]
static-test = [
    "flake8-bandit",
    "flake8-broken-line",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-commas",
    "flake8-comprehensions",
    "flake8-mutable",
    "flake8-quotes",
    "flakehell",
    "pep8-naming",
    "safety",
]

[tool.flakehell]
format = "grouped"
show_source = true
max_line_length = 120

[tool.flakehell.plugins]
flake8-bandit = ["+*"]
flake8-broken-line = ["+*"]
flake8-builtins = ["+*", "-A003"]
flake8-bugbear = ["+*"]
flake8-commas = ["+*"]
flake8-comprehensions = ["+*", "-C416"]
flake8-mutable = ["+*"]
flake8-quotes = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*", "-N805"]
pycodestyle = ["+*", "-E241", "-W504"]
pyflakes = ["+*", "-F401"]

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
